syntax = "proto3";
package ink.pmc.member.proto;

message MemberUpdateNotify {
  string service_id = 1;
  uint64 member_id = 2;
}